--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>hw module 4</title>
 </head>
@@ -34,12 +33,12 @@
     <main>
 
         <section class="products clearfix">
-            <h2 class="product-title">Featured Products</h2>
+            <h2 class="product-title clearfix">Featured Products</h2>
             <ul class="product-list clearfix">
                 <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
+                    <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
                     <p class="text">Blue Tshirt</p>
-                        <p class="price">$26</p>
+                        <div class="chclr"><p class="price">$26</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254" height="282">
@@ -86,8 +85,7 @@
                     <img class="news-list-image" src="img/img-9-pad.jpg" alt="pad" width="346" height="260">
                     <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                     <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
-                        ornare </p>
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read-more">Read More</button>
                 </li>
 
@@ -95,8 +93,7 @@
                     <img class="news-list-image" src="img/img-10-girls.jpg" alt="girls" width="346" height="260">
                     <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                     <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
-                        ornare </p>
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read-more">Read More</button>
                 </li>
 
@@ -104,8 +101,7 @@
                     <img class="news-list-image" src="img/img-11-bus.jpg" alt="bus" width="346" height="260">
                     <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
                     <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
-                        ornare </p>
+                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
                     <button class="read-more">Read More</button>
                 </li>
             </ul>
