--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -37,43 +37,43 @@
             <ul class="product-list clearfix">
                 <li class="product-list-item">
                     <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
-                    <p class="text">Blue Tshirt</p>
-                        <div class="chclr"><p class="price">$26</p></div>
+                    <div class="card-bottom"><p class="text">Blue Tshirt</p>
+                        <p class="price">$26</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254" height="282">
-                    <p class="text">Woman Shirt</p>
-                        <p class="price">$31</p>
+                    <div class="card-bottom"><p class="text">Woman Shirt</p>
+                        <p class="price">$31</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-3-hat.jpg" alt="hat" width="254" height="282">
-                    <p class="text">Yellow Tshirt</p>
-                        <p class="price">$21</p>
+                    <div class="card-bottom"><p class="text">Yellow Tshirt</p>
+                        <p class="price">$21</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-4-bag.jpg" alt="bag" width="254" height="282">
-                    <p class="text">Cool Lingerie</p>
-                        <p class="price">$56</p>
+                    <div class="card-bottom"><p class="text">Cool Lingerie</p>
+                        <p class="price">$56</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-5-bag.jpg" alt="bag" width="254" height="282">
-                    <p class="text">Blue Tshirt</p>
-                <p class="price">$26</p>
+                    <div class="card-bottom"><p class="text">Blue Tshirt</p>
+                <p class="price">$26</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-6-belt.jpg" alt="belt" width="254" height="282">
-                    <p class="text">Woman Shirt</p>
-                <p class="price">$21</p>
+                    <div class="card-bottom"><p class="text">Woman Shirt</p>
+                <p class="price">$31</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-7-shoes.jpg" alt="shoes" width="254" height="282">
-                    <p class="text">Yellow Tshirt</p>
-                <p class="price">$21</p>
+                    <div class="card-bottom"><p class="text">Yellow Tshirt</p>
+                <p class="price">$21</p></div>
                 </li>
                 <li class="product-list-item">
                     <img class="product-list-image" src="img/img-8-glasses.jpg" alt="glasses" width="254" height="282">
-                    <p class="text">Cool Lingerie</p> 
-                <p class="price">$56</p>
+                    <div class="card-bottom"><p class="text">Cool Lingerie</p> 
+                <p class="price">$56</p></div>
                 </li>
             </ul>
         </section>
