--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -6,109 +6,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>hw module 4</title>
 </head>
 
 <body>
-<h1 class="visually-hidden">Our amazing pain and gain website</h1>
-<div class="container">    
-<header class="page-header">
-        <nav class="clearfix">
-            
-            <li class="logo clearfix"><a href="#" class="site-logo">Mart</a></li>
-        
-            <ul class="site-navigation clearfix">
-                <li><a class="main-menu-link" href="#">Home</a></li>
-                <li><a class="main-menu-link" href="#">About Us</a></li>
-                <li><a class="main-menu-link" href="#">Page</a></li>
-                <li><a class="main-menu-link" href="#">Shop</a></li>
-                <li><a class="main-menu-link" href="#">Blog</a></li>
-                <li><a class="main-menu-link" href="#">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h1 class="visually-hidden">Our amazing pain and gain website</h1>
+    <div class="container">
+        <header class="page-header">
+            <nav class="clearfix">
 
-    <main>
+                <li class="logo clearfix"><a href="#" class="site-logo">Mart</a></li>
 
-        <section class="products clearfix">
-            <h2 class="product-title clearfix">Featured Products</h2>
-            <ul class="product-list clearfix">
-                <li class="product-list-item">
-                    <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Blue Tshirt</p>
-                        <p class="price">$26</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Woman Shirt</p>
-                        <p class="price">$31</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-3-hat.jpg" alt="hat" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Yellow Tshirt</p>
-                        <p class="price">$21</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-4-bag.jpg" alt="bag" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Cool Lingerie</p>
-                        <p class="price">$56</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-5-bag.jpg" alt="bag" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Blue Tshirt</p>
-                <p class="price">$26</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-6-belt.jpg" alt="belt" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Woman Shirt</p>
-                <p class="price">$31</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-7-shoes.jpg" alt="shoes" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Yellow Tshirt</p>
-                <p class="price">$21</p></div>
-                </li>
-                <li class="product-list-item">
-                    <img class="product-list-image" src="img/img-8-glasses.jpg" alt="glasses" width="254" height="282">
-                    <div class="card-bottom"><p class="text">Cool Lingerie</p> 
-                <p class="price">$56</p></div>
-                </li>
-            </ul>
-        </section>
+                <ul class="site-navigation clearfix">
+                    <li><a class="main-menu-link" href="#">Home</a></li>
+                    <li><a class="main-menu-link" href="#">About Us</a></li>
+                    <li><a class="main-menu-link" href="#">Page</a></li>
+                    <li><a class="main-menu-link" href="#">Shop</a></li>
+                    <li><a class="main-menu-link" href="#">Blog</a></li>
+                    <li><a class="main-menu-link" href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </header>
 
-        <section class="news">
-            <h2 class="news-title">Latest News</h2>
-            <ul class="news-list clearfix">
-                <li class="news-list-item">
-                    <img class="news-list-image" src="img/img-9-pad.jpg" alt="pad" width="346" height="260">
-                    <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
-                    <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button class="read-more">Read More</button>
-                </li>
+        <main>
 
-                <li class="news-list-item">
-                    <img class="news-list-image" src="img/img-10-girls.jpg" alt="girls" width="346" height="260">
-                    <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
-                    <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button class="read-more">Read More</button>
-                </li>
+            <section class="products clearfix">
+                <h2 class="product-title clearfix">Featured Products</h2>
+                <ul class="product-list clearfix">
+                    <li class="product-list-item">
+                        <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$26</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Woman Shirt</p>
+                            <p class="price">$31</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-3-hat.jpg" alt="hat" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Yellow Tshirt</p>
+                            <p class="price">$21</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-4-bag.jpg" alt="bag" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Cool Lingerie</p>
+                            <p class="price">$56</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-5-bag.jpg" alt="bag" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Blue Tshirt</p>
+                            <p class="price">$26</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-6-belt.jpg" alt="belt" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Woman Shirt</p>
+                            <p class="price">$31</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-7-shoes.jpg" alt="shoes" width="254" height="282">
+                        <div class="card-bottom">
+                            <p class="text">Yellow Tshirt</p>
+                            <p class="price">$21</p>
+                        </div>
+                    </li>
+                    <li class="product-list-item">
+                        <img class="product-list-image" src="img/img-8-glasses.jpg" alt="glasses" width="254"
+                            height="282">
+                        <div class="card-bottom">
+                            <p class="text">Cool Lingerie</p>
+                            <p class="price">$56</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
 
-                <li class="news-list-item">
-                    <img class="news-list-image" src="img/img-11-bus.jpg" alt="bus" width="346" height="260">
-                    <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
-                    <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate
-                        cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                    <button class="read-more">Read More</button>
-                </li>
-            </ul>
-        </section>
+            <section class="news">
+                <h2 class="news-title">Latest News</h2>
+                <ul class="news-list clearfix">
+                    <li class="news-list-item">
+                        <img class="news-list-image" src="img/img-9-pad.jpg" alt="pad" width="346" height="260">
+                        <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
+                        <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate
+                            cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                        <button class="read-more">Read More</button>
+                    </li>
 
-    </main>
-</div>
+                    <li class="news-list-item">
+                        <img class="news-list-image" src="img/img-10-girls.jpg" alt="girls" width="346" height="260">
+                        <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
+                        <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate
+                            cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                        <button class="read-more">Read More</button>
+                    </li>
+
+                    <li class="news-list-item">
+                        <img class="news-list-image" src="img/img-11-bus.jpg" alt="bus" width="346" height="260">
+                        <p class="article-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</p>
+                        <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate
+                            cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                        <button class="read-more">ead More</button>
+                    </li>
+                </ul>
+            </section>
+
+        </main>
+    </div>
 </body>
 
 </html>
