--- a/html-css/module-4/index.html
+++ b/html-css/module-4/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>hw module 4</title>
 </head>
@@ -33,65 +33,77 @@
 
         <main>
 
-            <section class="products clearfix">
-                <h2 class="product-title clearfix">Featured Products</h2>
+            <section class="products">
+                <h2 class="product-title">Featured Products</h2>
                 <ul class="product-list clearfix">
-                    <li class="product-list-item">
-                        <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$26</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-img" src="img/img-1-shoes.jpg" alt="shoes" width="254"
+                                height="282">
+                            <div class="card-bottom">
+                                <p class="text">Blue Tshirt</p>
+                                <p class="price">$26</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Woman Shirt</p>
-                            <p class="price">$31</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-2-belt.jpg" alt="belt" width="254"
+                                height="282">
+                            <div class="card-bottom">
+                                <p class="text">Woman Shirt</p>
+                                <p class="price">$31</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-3-hat.jpg" alt="hat" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Yellow Tshirt</p>
-                            <p class="price">$21</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-3-hat.jpg" alt="hat" width="254" height="282">
+                            <div class="card-bottom">
+                                <p class="text">Yellow Tshirt</p>
+                                <p class="price">$21</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-4-bag.jpg" alt="bag" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Cool Lingerie</p>
-                            <p class="price">$56</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-4-bag.jpg" alt="bag" width="254" height="282">
+                            <div class="card-bottom">
+                                <p class="text">Cool Lingerie</p>
+                                <p class="price">$56</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-5-bag.jpg" alt="bag" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Blue Tshirt</p>
-                            <p class="price">$26</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-5-bag.jpg" alt="bag" width="254" height="282">
+                            <div class="card-bottom">
+                                <p class="text">Blue Tshirt</p>
+                                <p class="price">$26</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-6-belt.jpg" alt="belt" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Woman Shirt</p>
-                            <p class="price">$31</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-6-belt.jpg" alt="belt" width="254"
+                                height="282">
+                            <div class="card-bottom">
+                                <p class="text">Woman Shirt</p>
+                                <p class="price">$31</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-7-shoes.jpg" alt="shoes" width="254" height="282">
-                        <div class="card-bottom">
-                            <p class="text">Yellow Tshirt</p>
-                            <p class="price">$21</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-7-shoes.jpg" alt="shoes" width="254"
+                                height="282">
+                            <div class="card-bottom">
+                                <p class="text">Yellow Tshirt</p>
+                                <p class="price">$21</p>
+                            </div>
+                        </a>
                     </li>
-                    <li class="product-list-item">
-                        <img class="product-list-image" src="img/img-8-glasses.jpg" alt="glasses" width="254"
-                            height="282">
-                        <div class="card-bottom">
-                            <p class="text">Cool Lingerie</p>
-                            <p class="price">$56</p>
-                        </div>
+                    <li class="product-list-item"><a href="#">
+                            <img class="product-list-image" src="img/img-8-glasses.jpg" alt="glasses" width="254"
+                                height="282">
+                            <div class="card-bottom">
+                                <p class="text">Cool Lingerie</p>
+                                <p class="price">$56</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </section>
@@ -105,7 +117,7 @@
                         <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate
                             cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        <button class="read-more">Read More</button>
+                        <a class="read-more" href="#">Read More</a>
                     </li>
 
                     <li class="news-list-item">
@@ -114,7 +126,7 @@
                         <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate
                             cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        <button class="read-more">Read More</button>
+                        <a class="read-more" href="#">Read More</a>
                     </li>
 
                     <li class="news-list-item">
@@ -123,7 +135,7 @@
                         <p class="article-text">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
                             vulputate
                             cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
-                        <button class="read-more">Read More</button>
+                        <a class="read-more" href="#">Read More</a>
                     </li>
                 </ul>
             </section>
